[tool.poetry]
name = "code-graph-backend"
version = "0.1.0"
description = "code_graph is designed to help developers visualize and analyze the structure of their source code. It takes source code as input and generates a graph representation, making it easier to understand relationships and dependencies within the codebase."
authors = ["Roi Lipman <roilipman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
graphrag-sdk = { version = "^0.4.1", extras = ["litellm"] }
tree-sitter = "^0.23.2"
validators = "^0.34.0"
falkordb = "^1.0.5"
tree-sitter-c = "^0.23.2"
tree-sitter-python = "^0.23.6"
flask = "^3.0.3"
python-dotenv = "^1.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
